--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-26  Ian Lance Taylor  <ian@wasabisystems.com>
+
+	* gcc.dg/20040124-1.c: Moved test from here...
+	* gcc.c-torture/compile/20040124-1.c: ...to here.
+
 2004-01-26  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* gcc.dg/sparc-ret.c: Run only in 32-bit mode.  Don't scan
