--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2004-01-26  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* config/arm/arm.c (TARGET_SETUP_INCOMING_VARARGS): New.
+	(arm_setup_incoming_varargs): Likewise.
+	* config/arm/arm.h (SETUP_INCOMING_VARARGS): Remove.
+
+2004-01-26  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* config/cris/cris.c (TARGET_SETUP_INCOMING_VARARGS): New.
 	(cris_setup_incoming_varargs): Likewise.
 	* config/cris/cris.h (SETUP_INCOMING_VARARGS): Remove.
