Use adjust_address_nv directly with appropriate mode. OKed by David Edelsohn.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76645 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -9898,13 +9898,13 @@
   "
 {
   rtx temp = gen_reg_rtx (Pmode);
+  int units_per_word = (TARGET_32BIT) ? 4 : 8;
+  enum machine_mode wmode = (TARGET_32BIT) ? SImode : word_mode;
 
   /* Copy the backchain to the first word, sp to the second.  */
   emit_move_insn (temp, gen_rtx_MEM (Pmode, operands[1]));
-  emit_move_insn (operand_subword (operands[0], 0, 0,
-				   (TARGET_32BIT ? DImode : TImode)),
-		  temp);
-  emit_move_insn (operand_subword (operands[0], 1, 0, (TARGET_32BIT ? DImode : TImode)),
+  emit_move_insn (adjust_address_nv (operands[0], wmode, 0), temp);
+  emit_move_insn (adjust_address_nv (operands[0], wmode, units_per_word),
 		  operands[1]);
   DONE;
 }")
@@ -9916,13 +9916,14 @@
   "
 {
   rtx temp = gen_reg_rtx (Pmode);
+  int units_per_word = (TARGET_32BIT) ? 4 : 8;
+  enum machine_mode wmode = (TARGET_32BIT) ? SImode : word_mode;
 
   /* Restore the backchain from the first word, sp from the second.  */
   emit_move_insn (temp,
-		  operand_subword (operands[1], 0, 0, (TARGET_32BIT ? DImode : TImode)));
+		  adjust_address_nv (operands[1], wmode, 0));
   emit_move_insn (operands[0],
-		  operand_subword (operands[1], 1, 0,
-				   (TARGET_32BIT ? DImode : TImode)));
+		  adjust_address_nv (operands[1], wmode, units_per_word));
   emit_move_insn (gen_rtx_MEM (Pmode, operands[0]), temp);
   DONE;
 }")
