Add changelog entry for the testcase  which was forgotten by Fariborz Jahanian.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76657 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-26  Fariborz Jahanian <fjahanian@apple.com>
+
+	PR middle-end/13779
+	* gcc.dg/darwin-longlong.c: New test.
+
 2004-01-26  Ian Lance Taylor  <ian@wasabisystems.com>
 
 	* gcc.dg/20040124-1.c: Moved test from here...
