--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-26  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/13363
+	* g++.dg/expr/for1.C: New test.
+
 2004-01-26  Fariborz Jahanian <fjahanian@apple.com>
 
 	PR middle-end/13779
