--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-25  Jan Hubicka  <jh@suse.cz>
+
+	* genextract.c (main): Do not output the memset when not checking.
+
 2004-01-26  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/h8300/h8300.c (h8300_tiny_constant_address_p): Use a
