* cselib.c (discard_useless_values):  Clear out value pointer pointing 	to datastructure to be recycled.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76666 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-26  Jan Hubicka  <jh@suse.cz>
+
+	* cselib.c (discard_useless_values):  Clear out value pointer pointing
+	to datastructure to be recycled.
+
 2004-01-25  Jan Hubicka  <jh@suse.cz>
 
 	* genextract.c (main): Do not output the memset when not checking.
