--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-26  Richard Henderson  <rth@redhat.com>
+
+	* c-parse.in (extension): Use itype.
+	(SAVE_EXT_FLAGS): Don't allocate a tree.
+	(RESTORE_EXT_FLAGS): Don't read a tree.
+
 2004-01-26  Jan Hubicka  <jh@suse.cz>
 
 	* cselib.c (discard_useless_values):  Clear out value pointer pointing
