--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-27  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/i386/i386.c (ix86_constant_alignment): Decrease alignment
+	of long string literals from 32 bytes to sizeof (void *) when !-Os
+	and to 1 with -Os.
+
 2004-01-26  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/h8300/h8300.c (h8300_tiny_constant_address_p): Accept
