--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-27  Alan Modra  <amodra@bigpond.net.au>
+
+	* config/rs6000/rs6000.h: Correct target_flags free bits comment.
+	(PREDICATE_CODES): Remove duplicate.
+	* config/rs6000/linux64.h (CPP_SYSV_SPEC): Don't define.
+	(SUBSUBTARGET_OVERRIDE_OPTIONS): Disallow 32 bit TARGET_PROFILE_KERNEL.
+	(MASK_PROFILE_KERNEL): Adjust define.
+
 2004-01-27  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/i386/i386.c (ix86_constant_alignment): Decrease alignment
