--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,8 @@
 2004-01-27  Ian Lance Taylor  <ian@wasabisystems.com>
 
+	* gcc.dg/const-elim-1.c: Add xfail for strongarm-*-* and
+	xscale-*-*.
+
 	* gcc.dg/arm-mmx-1.c: New test.
 
 2004-01-27  Eric Botcazou  <ebotcazou@libertysurf.fr>
