--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,14 @@
+2004-01-26  Kim Ho  <kho@redhat.com>
+
+	* gnu/java/awt/peer/gtk/GtkFramePeer.java (moveLayout): New
+	method.
+	(setMenuBar): Shift the Gtk layout up/down by the MenuBar
+	height and let the Layout Managers readjust anything that
+	needs to move.
+	* jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c
+	(moveLayout): New method. Shift everything in the Gtk
+	layout in the Y direction by an offset.
+
 2004-01-26  David Jee  <djee@redhat.com>
 
 	* gnu/java/awt/peer/gtk/GtkComponentPeer.java
