2004-01-26  Kim Ho  <kho@redhat.com>
        * gnu/java/awt/peer/gtk/GtkFramePeer.java (setMenuBar):
        Fix spacing.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76730 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-26  Kim Ho  <kho@redhat.com>
 
+	* gnu/java/awt/peer/gtk/GtkFramePeer.java (setMenuBar):
+	Fix spacing.
+
+2004-01-26  Kim Ho  <kho@redhat.com>
+
 	* gnu/java/awt/peer/gtk/GtkFramePeer.java (moveLayout): New
 	method.
 	(setMenuBar): Shift the Gtk layout up/down by the MenuBar
