--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-26  Andrew Haley  <aph@redhat.com>
+
+	* javax/swing/table/JTableHeader.java: Extend JComponent
+
 2004-01-26  Kim Ho  <kho@redhat.com>
 
 	* gnu/java/awt/peer/gtk/GtkFramePeer.java (setMenuBar):
