2004-01-27  Michael Koch  <konqueror@gmx.de>
	* javax/swing/AbstractCellEditor.java: Reformated.
	* javax/swing/DefaultListSelectionModel.java
	(listenerList): Made protected.
	(addListSelectionListener): Javadoc added.
	(removeListSelectionListener): Likewise.
	(getListeners): Likewise.
	(getListSelectionListeners): Likewise.
	* javax/swing/JComboBox.java: Merged copyright year.
	* javax/swing/plaf/basic/BasicGraphicsUtils.java: Merged empty line.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76736 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,14 @@
+2004-01-27  Michael Koch  <konqueror@gmx.de>
+
+	* javax/swing/AbstractCellEditor.java: Reformated.
+	* javax/swing/DefaultListSelectionModel.java
+	(listenerList): Made protected.
+	(addListSelectionListener): Javadoc added.
+	(removeListSelectionListener): Likewise.
+	(getListeners): Likewise.
+	(getListSelectionListeners): Likewise.
+	* javax/swing/JComboBox.java: Merged copyright year.
+	* javax/swing/plaf/basic/BasicGraphicsUtils.java: Merged empty line.
 2004-01-26  Andrew Haley  <aph@redhat.com>
 
 	* javax/swing/table/JTableHeader.java: Extend JComponent
