--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,25 @@
+2004-01-27  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/iq2000/iq2000-protos.h: Remove the prototype for
+	iq2000_setup_incoming_varargs.
+	* config/iq2000/iq2000.c (TARGET_PROMOTE_FUNCTION_ARGS): New.
+	(TARGET_PROMOTE_FUNCTION_RETURN): Likewise.
+	(TARGET_PROMOTE_PROTOTYPES): Likewise.
+	(TARGET_STRUCT_VALUE_RTX): Likewise.
+	(TARGET_RETURN_IN_MEMORY): Likewise.
+	(TARGET_SETUP_INCOMING_VARARGS): Likewise.
+	(TARGET_STRICT_ARGUMENT_NAMING): Likewise.
+	(iq2000_return_in_memory): Likewise.
+	(iq2000_setup_incoming_varargs): Make it static.  Receive the
+	first argument by reference.
+	* config/iq2000/iq2000.h (PROMOTE_FUNCTION_ARGS): Remove.
+	(PROMOTE_FUNCTION_RETURN): Likewise.
+	(PROMOTE_PROTOTYPES): Likewise.
+	(RETURN_IN_MEMORY): Likewise.
+	(STRUCT_VALUE): Likewise.
+	(SETUP_INCOMING_VARARGS): Likewise.
+	(STRICT_ARGUMENT_NAMING): Likewise.
+
 2004-01-24  James A. Morrison  <ja2morri@uwaterloo.ca>
 
         * fixinc/fixinc.c (test_test): Initialize res.
