--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-27  Devang Patel <dpatel@apple.com>
+
+	* g++.dg/debug/namespace1.C: New test.
+	
 2004-01-27  Ian Lance Taylor  <ian@wasabisystems.com>
 
 	* gcc.dg/const-elim-1.c: Add xfail for strongarm-*-* and
