--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -9899,12 +9899,11 @@
 {
   rtx temp = gen_reg_rtx (Pmode);
   int units_per_word = (TARGET_32BIT) ? 4 : 8;
-  enum machine_mode wmode = (TARGET_32BIT) ? SImode : word_mode;
 
   /* Copy the backchain to the first word, sp to the second.  */
   emit_move_insn (temp, gen_rtx_MEM (Pmode, operands[1]));
-  emit_move_insn (adjust_address_nv (operands[0], wmode, 0), temp);
-  emit_move_insn (adjust_address_nv (operands[0], wmode, units_per_word),
+  emit_move_insn (adjust_address_nv (operands[0], Pmode, 0), temp);
+  emit_move_insn (adjust_address_nv (operands[0], Pmode, units_per_word),
 		  operands[1]);
   DONE;
 }")
@@ -9917,13 +9916,12 @@
 {
   rtx temp = gen_reg_rtx (Pmode);
   int units_per_word = (TARGET_32BIT) ? 4 : 8;
-  enum machine_mode wmode = (TARGET_32BIT) ? SImode : word_mode;
 
   /* Restore the backchain from the first word, sp from the second.  */
   emit_move_insn (temp,
-		  adjust_address_nv (operands[1], wmode, 0));
+		  adjust_address_nv (operands[1], Pmode, 0));
   emit_move_insn (operands[0],
-		  adjust_address_nv (operands[1], wmode, units_per_word));
+		  adjust_address_nv (operands[1], Pmode, units_per_word));
   emit_move_insn (gen_rtx_MEM (Pmode, operands[0]), temp);
   DONE;
 }")
