--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-27  Richard Sandiford  <rsandifo@redhat.com>
+
+	PR target/7297
+	* except.c (init_eh): Use a 5-word __jbuf for __builtin_setjmp().
+
 2004-01-27  David Edelsohn  <edelsohn@gnu.org>
 
 	* config/rs6000/rs6000.c (rs6000_emit_move): #if 0 splitting
