* config/fp-bit.c (pack_d): When using paired doubles to implement 	a long double, round the high part separately. 	(unpack_d): Fix the case in which the high part is a power of two 	and the low part is a nonzero value of the opposite sign.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76780 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-28  Richard Sandiford  <rsandifo@redhat.com>
+
+	* config/fp-bit.c (pack_d): When using paired doubles to implement
+	a long double, round the high part separately.
+	(unpack_d): Fix the case in which the high part is a power of two
+	and the low part is a nonzero value of the opposite sign.
+
 2004-01-28  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/c4x/c4x.c (TARGET_ASM_EXTERNAL_LIBCALL): New.
