--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-28  Nick Clifton  <nickc@redhat.com>
+
+	* config/arm/arm.c (arm_expand_builtin): Force second argument of
+	the setcwx insn into a register.
+
 2004-01-28  Richard Sandiford  <rsandifo@redhat.com>
 
 	* config/fp-bit.c (pack_d): When using paired doubles to implement
