2004-01-28  David Jee  <djee@redhat.com>
	* gnu/java/awt/peer/gtk/GtkFramePeer.java
	(create): Set the default foreground color to
	java.awt.SystemColor.windowText.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76792 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-28  David Jee  <djee@redhat.com>
+
+	* gnu/java/awt/peer/gtk/GtkFramePeer.java
+	(create): Set the default foreground color to
+	java.awt.SystemColor.windowText.
+
 2004-01-27  Michael Koch  <konqueror@gmx.de>
 
 	* gnu/java/awt/peer/gtk/GdkClasspathFontPeer.java,
