--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-28  Ian Lance Taylor  <ian@wasabisystems.com>
+
+	* Makefile.in (options.c options.h): Use stamp file s-options to
+	avoid unnecessary rebuilds.
+	(options.o): New target listing dependencies.
+	(gtyp-gen.h): Use stamp file s-gtyp-gen.
+	(STAGESTUFF): Add s-gtyp-gen.
+
 2004-01-28  Richard Henderson  <rth@redhat.com>
 
 	* ggc.h (ggc_free): Declare.
