--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-28  Jan Hubicka  <jh@suse.cz>
+
+	* semantics.c (expand_body)  Do emit_associated_thunks before
+	expansion.
+
 2004-01-27  Devang Patel  <dpatel@apple.com>
 
 	* name-lookup.c: Include "debug.h"
