* genrecog.c (write_node): Remove a useless local variable.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76807 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-28  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* genrecog.c (write_node): Remove a useless local variable.
+
 2004-01-28  Ian Lance Taylor  <ian@wasabisystems.com>
 
 	* Makefile.in (options.c options.h): Use stamp file s-options to
