2004-01-28  Michael Koch  <konqueror@gmx.de>
	* gnu/java/lang/ClassHelper.java
	(getPackagePortion): Removed.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76809 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-28  Michael Koch  <konqueror@gmx.de>
 
+	* gnu/java/lang/ClassHelper.java
+	(getPackagePortion): Removed.
+
+2004-01-28  Michael Koch  <konqueror@gmx.de>
+
 	* javax/swing/JComponent.java
 	(listenerList): Initalize globally.
 	(ancestor_list): Removed.
