--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-28  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/13736
+	* parser.c (cp_parser_direct_declarator): Do not prevent
+	backtracking inside a parenthesized declarator.
+	(cp_parser_parameter_declaration): Fix typo in comment.
+
 2004-01-28  Jan Hubicka  <jh@suse.cz>
 
 	* semantics.c (expand_body)  Do emit_associated_thunks before
